--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/iriediese/scraper#readme",
   "dependencies": {
     "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "puppeteer": "^21.3.8"
   }
